# ai-tagging

./: README.md  compress_images.py  pyproject.toml  requirements.txt  task1.py  task2.py
csv/: article_content.csv  image_tags.csv  tag_options.csv
